--- a/translate/crdb/crdb_paper_cn/index.html
+++ b/translate/crdb/crdb_paper_cn/index.html
@@ -2918,15 +2918,15 @@
                 
                 <h1 id="cockroachdbsql">CockroachDB：弹性地理分布SQL数据库</h1>
 <h2 id="_1">摘要</h2>
-<p>我们生活在一个日益互联的世界中，许多组织跨国家甚至跨洲运作。为了服务于全球用户，组织正在用能够将OLTP负载扩展到数百万用户的基于云的系统中，以替换其传统DBMS。</p>
-<p>CockroachDB是可扩展的SQL DBMS，它是从头开始构建的，以支持这些全局OLTP负载，同时保持高可用性和强一致性。就像它的名字一样，CockroachDB通过复制和自动恢复机制来抵御灾难。</p>
+<p>我们生活在一个日益互联的世界中，许多组织机构跨国家甚至跨洲运作。为了服务于全球用户，组织机构正在用能够将OLTP负载扩展到数百万用户的基于云的系统中，以替换其传统DBMS。</p>
+<p>CockroachDB是可扩展的SQL数据库系统，其从头开始构建，以支持这些全球的OLTP工作负载，同时保持高可用性和强一致性。就像它的名字一样，CockroachDB通过复制和自动恢复机制来抵御灾难。</p>
 <p>本文介绍了CockroachDB的设计及其新颖的事务模型，该模型支持通用硬件上实现了一致的地理分布事务。我们将介绍CockroachDB如何复制和分布数据以实现容错和高性能，以及其分布式SQL层如何根据数据库集群的大小自动扩展，同时提供用户期望的标准SQL接口。最后，我们提供了全面的性能评估，并分享了一些CockroachDB用户的案例研究。最后，我们将描述在过去五年中构建CockroachDB时吸取的教训。</p>
 <h2 id="1">1 介绍</h2>
-<p>现代事务处理负载越来越按地理地区分布。全球公司不仅希望构建可扩展的应用程序，而且希望出于性能和法规的原因而将数据驻留在细粒度的位置进行控制，从而推动了这一趋势。</p>
-<p>例如，假设一家大型公司在欧洲和澳大利亚拥有核心用户群，而在美国则拥有快速增长的用户群。为了在降低运营成本的同时为其全球平台提供支持，该公司已做出战略决策，决定迁移到基于云的数据库管理系统（DBMS）。它具有以下要求：为了符合欧盟的通用数据保护条例（GDPR），其欧洲用户的个人数据必须在欧盟内部注册。为了避免由于跨洲通信而导致的高延迟，数据应位于最常访问数据的用户附近，并且在数据传输时遵循它们（在法规限制内）。用户期望“始终在线”的体验，因此DBMS必须具有容错能力，即使整个地区故障也能够幸存。最后，为了避免数据异常并简化应用程序开发，DBMS必须通过可串行化的事务来支持SQL。</p>
+<p>现代事务处理工作负载越来越基于地理地区分布。全球公司不仅希望构建可扩展的应用程序，而且希望出于性能和法规的原因而将数据的驻留位置以更细粒度进行控制，这些需求推动了这一趋势不断向前发展。</p>
+<p>例如，假设一家大型公司在欧洲和澳大利亚拥有核心用户群，而在美国则拥有快速增长的用户群。为了在降低运营成本的同时为其全球平台提供支持，该公司已做出战略决策，决定迁移到基于云的数据库管理系统（DBMS）。它具有以下要求：为了符合欧盟的通用数据保护条例（GDPR），其欧洲用户的个人数据必须在欧盟内部注册。为了避免由于跨洲通信而导致的高延迟，数据应位于最常访问数据的用户附近，并且在数据传输时遵循它们（在法规限制内）。用户期望“始终在线”的体验，因此DBMS必须具有容错能力，即使整个地区故障也能够继续提供服务。最后，为了避免数据异常并简化应用程序开发，DBMS必须通过可串行化的事务来支持SQL。</p>
 <p><img alt="" src="../image/crdb_paper_01.png" /></p>
-<p><center>图1：全球CockroachDB集群</center></p>
-<p>CockroachDB（简称CRDB）是一种商业DBMS，旨在支持所有上述要求。 举例来说，上述公司是将其全球平台迁移到CRDB的真实组织，图1显示了部署CRDB的战略构想。 在本文中，我们介绍了CRDB的设计和实现，并详细说明了我们做出决策的理由以及在此过程中获得的一些经验教训。 通过重点介绍以下功能，我们将说明CRDB如何满足上述全球公司的要求：</p>
+<p><center>图1：全球分布的CockroachDB集群</center></p>
+<p>CockroachDB（简称CRDB）是一种商业DBMS，旨在支持所有上述要求。 举例来说，上述公司是将其全球平台迁移到CRDB的真实组织机构，图1显示了部署CRDB的战略构想。 在本文中，我们介绍了CRDB的设计和实现，并详细说明了我们做出决策的理由以及在此过程中获得的一些经验教训。 通过重点介绍以下功能，我们将说明CRDB如何满足上述全球公司的要求：</p>
 <ol>
 <li><strong>容错和高可用性</strong>：为了提供容错能力，CRDB在不同地理地区的数据库中为每个分区至少维护三个副本。每当节点发生故障时，它通过自动恢复机制保持高可用性。</li>
 <li><strong>地理分布分区和副本放置</strong>：CRDB是水平可伸缩的，在添加节点时自动增加容量并迁移数据。默认情况下，它使用一组启发式方法进行数据放置（请参阅第2.2.3节），但它还允许用户以精细的粒度控制如何在节点之间划分数据以及副本应位于的位置。我们将描述用户如何使用此功能进行性能优化或作为数据驻留策略的一部分。</li>
@@ -2934,65 +2934,65 @@
 </ol>
 <p>CRDB是旨在“make data easy”的生产级系统，因此，除了上述内容之外，CRDB还通过最新的查询优化器和分布式SQL执行引擎来支持SQL标准。它还包括用户将CRDB用于生产环境作为存储记录系统所必需的所有功能，包括在线模式变更、备份和恢复、快速导入、JSON支持以及与外部分析系统的集成。</p>
 <p>可以在GitHub[12]上获得CRDB的所有源代码。数据库的核心功能受业务源许可证（BSL）的约束，三年后可转换为完全开源的Apache 2.0许可证[13]。另外，CRDB是“云中立”的，这意味着单个CRDB集群可以跨越任意数量的不同公共和私有云。这两个功能使用户能够避免供应商锁定的风险，例如依赖于SQL的专有扩展[6，23]或云提供商的业务中断[70]。</p>
-<p>本文的其余部分组织如下：在第2节中，我们概述了CRDB数据库如何通过复制和基于策略的数据放置来提供容错能力和高可用性。第3部分深入研究了CRDB的事务模型。第4节说明了如何使用时间戳顺序来实现强一致性，即使在通用硬件上时钟松散同步的情况下也是如此。第5节介绍了SQL数据模型、执行计划，执行引擎和模式变更。第6节评估CRDB的性能，并包含两个CRDB使用情况的案例研究。第7节总结了我们在构建CRDB时获得的经验教训。第8节介绍了相关工作，第9节介绍了结论和未来的工作。</p>
+<p>本文的其余部分组织如下：在第2节中，我们概述了CRDB数据库如何通过复制和基于策略的数据放置来提供容错能力和高可用性。第3部分深入研究了CRDB的事务模型。第4节说明了如何使用时间戳顺序来实现强一致性，即使在通用硬件时钟松散同步的情况下也是如此。第5节介绍了SQL数据模型、执行计划、执行引擎和模式变更。第6节评估CRDB的性能，并包含两个CRDB使用情况的案例研究。第7节总结了我们在构建CRDB时获得的经验教训。第8节介绍了相关工作，第9节给出结论和未来的工作。</p>
 <h2 id="2">2 系统架构</h2>
 <p>本节从第2.1节中概述CRDB的体系结构开始。第2.2节和第2.3节介绍了系统如何复制和分布数据以提供容错能力，高可用性和地理分布分区。</p>
 <h3 id="21-cockroachdb">2.1 CockroachDB的体系结构</h3>
-<p>CRDB使用标准的无共享[62]架构，其中所有节点都用于数据存储和计算。 CRDB集群由任意数量的节点组成，这些节点可以位于同一数据中心中或分布在全球范围内。客户端可以连接到群集中的任何节点。</p>
+<p>CRDB使用标准的无共享[62]架构，其中所有节点都用于数据存储和计算。 CRDB集群由任意数量的节点组成，这些节点可以位于同一数据中心或分布在全球范围内。客户端可以连接到群集中的任何节点。</p>
 <p>在单个节点内，CRDB具有分层体系结构。现在，我们介绍每个层，包括整个白皮书中使用的概念和术语。</p>
 <h4 id="211-sql">2.1.1 SQL层</h4>
-<p>SQL层是最高层，它是所有用户与数据库交互的接口。包括解析器、优化器和SQL执行引擎，这些模块将SQL语句转换为对键值（KV）存储的读写请求。</p>
-<p>通常，SQL层不知道如何对数据进行分区或分布，因为下面的层表示单个整体式KV存储的抽象。第5节将描述某些查询如何打破这种抽象，但是，这样可以提高分布式SQL计算的效率。</p>
+<p>SQL层是最高层，它是所有用户与数据库交互的接口。包括解析器、优化器和SQL执行引擎，这些模块将SQL语句转换为对KV存储的读写请求。</p>
+<p>通常，SQL层不知道如何对数据进行分区或分布，因为下面的层表示将数据抽象为单个整体的KV映射表。第5节将描述某些查询如何打破这种抽象，这样可以提高分布式SQL计算的效率。</p>
 <h4 id="212-kv">2.1.2 事务KV层</h4>
-<p>来自SQL层的请求将传到事务KV层，以确保跨越多个KV对的变更的原子性。它还主要负责CRDB的隔离保证。原子性和隔离性保证将在第3节和第4节中详细介绍。</p>
+<p>来自SQL层的请求传到事务KV层，以确保跨越多个KV对的变更的原子性。它还主要负责CRDB的隔离性保证。如何保证原子性和隔离性将在第3节和第4节中详细介绍。</p>
 <h4 id="213">2.1.3 分布层</h4>
-<p>该层表示成按键排序的整体逻辑键空间的抽象。所有数据均可在此键空间内寻址，无论是系统数据（用于内部数据结构和元数据）还是用户数据（SQL表和索引）。</p>
-<p>CRDB在键上使用范围分区将数据划分为大小约为64MiB的连续有序块，这些块在整个集群中存储。我们称这些块为“范围”（range）。</p>
-<p>范围之间的顺序在一组系统范围内的两级索引结构中维护，这些范围被缓存用于快速键查找。分布层负责确定哪些范围应处理每个查询的哪个子集，并相应地路由这些子集。</p>
-<p>范围大小~64MiB，因为它的大小足够小，使得范围可以在节点之间快速移动，但又足够大，可以存储可能同时访问的一组连续数据。范围开始为空，增大，当它们太大时拆分，以及当它们太小时合并。范围还会根据负载进行划分，以减少热点和CPU使用率的不平衡。</p>
+<p>该层表示成按key排序的逻辑上是一个整体key空间的抽象。所有数据均可在此key空间内寻址，无论是系统数据（用于内部数据结构和元数据）还是用户数据（SQL表和索引）。</p>
+<p>CRDB在键上使用范围分区将数据划分为大小约为64MiB的连续有序块，这些块在整个集群中存储。我们称这些块为“范围”（Range）。</p>
+<p>Range之间的顺序在一组系统Range内的两级索引结构中维护，这些Range被缓存用于快速键查找。分布层负责确定哪些范围应处理每个查询的哪个子集，并相应地路由这些子集。</p>
+<p>范围大小~64MiB，因为它的大小足够小，使得范围可以在节点之间快速移动，但又足够大，可以存储可能同时访问的一组连续数据。范围开始为空，慢慢增大，当它们太大时会进行拆分，当它们太小时会进行合并。范围还会根据业务负载进行划分，以减少热点和避免CPU使用的不均衡。</p>
 <h4 id="214">2.1.4 复制层</h4>
 <p>默认情况下，每个范围是三个副本，每个副本存储在不同的节点上。在第2.2节中，我们描述了复制层如何使用基于共识的复制来确保修改的持久性。</p>
 <h4 id="215">2.1.5 存储层</h4>
 <p>这是最底层，本地磁盘支持的KV存储。支持高效的写入和范围扫描，以实现高性能的SQL执行。在撰写本文时，我们依赖RocksDB [54]，在其它地方有对其很好的文档描述，在整篇文章中，我们都将其视为黑匣子。</p>
 <h3 id="22">2.2 容错和高可用性</h3>
-<p>CRDB通过数据复制（第2.2.1节），在发生故障时的自动恢复机制（第2.2.2节）和数据放置策略（第2.2.3节）来保证容错能力和高可用性。</p>
+<p>CRDB通过数据复制（第2.2.1节），在发生故障时的自动恢复机制（第2.2.2节）以及数据放置策略（第2.2.3节）来保证容错能力和高可用性。</p>
 <h4 id="221-raft">2.2.1 使用Raft进行复制</h4>
-<p>CRDB使用Raft共识算法[46]进行一致的复制。 范围的副本形成一个Raft组，其中每个副本都是协调所有对Raft组的写入的长期领导者，或者是跟随者。 CRDB中复制的单位是命令，它表示要对存储引擎进行的一系列底层修改。 Raft维护范围的副本之间更新的一致，有序的日志，并且当Raft声明将它们提交到范围的日志时，每个副本分别将命令应用于存储引擎。</p>
+<p>CRDB使用Raft共识算法[46]进行一致的复制。 范围的副本形成一个Raft组，其中每个副本都是协调所有对Raft组的写入的长期领导者，或者是跟随者。 CRDB中复制的单位是命令，它表示要对存储引擎进行的一系列底层修改。 Raft维护范围的副本之间更新的一致，日志的有序性，并且当Raft声明将它们已经提交到范围的日志时，每个副本分别将命令应用于存储引擎。</p>
 <p>CRDB使用基于范围的租约，其中Raft组（通常是Raft组的领导者）中的单个副本充当租约保持者。它是唯一可以提供最新信息读取或发起提议给Raft组领导者的副本。由于所有写入均通过租约保持者进行，因此读取可以绕过Raft所需的网络往返，而不会牺牲一致性。用户范围的租约与租约保持者所在的节点的活动密切相关；为了表示活动状态，节点每隔4.5秒在系统范围内发送一套特殊记录的心跳消息。系统范围使用基于超时租约，该租约必须每9秒更新一次。如果副本检测到租约保持者不存在，它将尝试获取租约。</p>
-<p>为了确保一次只保留一个副本，在Raft上附带租借回收；尝试获取租约的副本通过提交特殊的租约获取日志来这样做。为了防止两个副本获取时间上重叠的租约，租约获取请求应包括在请求时被认为有效的租约副本。正如我们将在第4节中讨论的那样，确保CRDB的隔离保证至关重要。</p>
+<p>为了确保一次只保留一个副本，在Raft上附带租约回收；尝试获取租约的副本通过提交特殊的租约获取日志来这样做。为了避免两个副本获取时间上重叠的租约，租约获取请求应包括在请求时被认为有效的租约副本。正如我们将在第4节中讨论的那样，确保CRDB的隔离保证至关重要。</p>
 <h4 id="222">2.2.2 成员变更和自动负载（重新）平衡</h4>
-<p>可以将节点添加到正在运行的CRDB群集中或从中删除，这些节点可能会暂时甚至永久失效。 CRDB对待所有这些情况的处理方式相似：它们都导致负载在新的和/或剩余的活动节点之间重新分布。</p>
-<p>对于短期故障，只要大多数副本仍然可用，CRDB将使用Raft无缝运行。如果领导者失败，则Raft确保为Raft组选举新的领导者，以便事务能够继续进行。受影响的副本可以在重新联机后重新加入其组，并且对端节点可以通过以下方式帮助他们赶上丢失的更新：（1）发送完整范围数据的快照，或者（2）发送一组要应用的缺失Raft日志条目。根据副本不可用时发生的写入次数确定使用的方法。</p>
-<p>对于长期故障，CRDB会自动创建复制不足的范围的新副本（使用不受影响的副本作为源），并按照下一节中的说明确定放置位置。所需的节点活动数据和群集指标使用对等Gossip协议在整个群集中传播。</p>
+<p>可以将节点添加到正在运行的CRDB群集中或从集群中删除节点，这些节点可能会暂时甚至永久失效。 CRDB对待所有这些情况的处理方式相似：它们都导致负载在新的和/或剩余的活动节点之间重新分布。</p>
+<p>对于短暂的故障，只要大多数副本仍然可用，CRDB将使用Raft无缝运行。如果领导者失败，则Raft确保为Raft组选举新的领导者，以便事务能够继续进行。受影响的副本可以在重新联机后重新加入其组，并且对端节点可以通过以下方式帮助他们追赶上丢失的更新：（1）发送完整范围数据的快照，或者（2）发送一组要应用的缺失Raft日志条目。根据副本不可用时发生的写入次数确定使用的方法。</p>
+<p>对于长期故障，CRDB会自动创建不满足复制因子范围的新副本（使用不受影响的副本作为源），并按照下一节中的说明确定放置位置。所需的节点活动数据和群集指标使用点对点的Gossip协议在整个群集中传播。</p>
 <h4 id="223">2.2.3 副本位置</h4>
 <p>CRDB具有手动和自动机制来控制副本的放置。</p>
-<p>为了手动控制放置策略，用户可以使用一组属性在CRDB中配置各个节点。这些属性可以指定节点功能（例如专用硬件，RAM，磁盘类型等）和/或节点位置（例如国家/地区，可用地区等）。在数据库中创建表时，用户可以指定放置约束和首选项作为表模式的一部分。例如，用户可以在表中包括“地区”列，该列可用于定义表的分区并将分区映射到特定的地理地区。</p>
+<p>为了手动控制放置策略，用户可以使用一组属性在CRDB中配置各个节点。这些属性可以指定节点功能（例如专用硬件，RAM，磁盘类型等）和/或节点位置（例如国家、地区、可用区等）。在数据库中创建表时，用户可以指定放置约束和首选项作为表模式的一部分。例如，用户可以在表中包括“地区”列，该列可用于定义表的分区并将分区映射到特定的地理地区。</p>
 <p>副本放置的另一种机制是自动的：CRDB将副本分布在各个故障域中（同时遵守指定的约束和首选项），以容忍各种严重程度的故障模式（磁盘，机架，数据中心或地区故障）。 CRDB还使用各种启发式方法来平衡负载和磁盘利用率。</p>
 <h3 id="23">2.3 数据放置策略</h3>
 <p>CRDB的副本和租约持有者放置机制允许各种可能的数据放置策略，这些策略允许用户遵守数据注册要求，并在性能和容错能力之间进行权衡。下面列出了我们支持的一些多地区模式。</p>
 <ul>
 <li>
-<p><strong>按地理分区的副本</strong>：对于具有地理访问位置的数据，可以按访问位置对表进行分区，并将每个分区（范围集）固定到特定地区。这样可以快速进行地区内读取和地区内写入，以及保证AZ故障时的可用性。地区范围内的故障会导致本地地区的数据不可用。此策略还可用于强制执行数据驻留要求。</p>
+<p><strong>按地理位置分区的副本</strong>：对于具有地理访问位置的数据，可以按访问位置对表进行分区，并将每个分区（范围集）固定到特定地区。这样可以快速进行地区内读取和地区内写入，以及保证AZ故障时的可用性。地区范围内的故障会导致本地地区的数据不可用。此策略还可用于强制执行数据驻留要求。</p>
 </li>
 <li>
-<p><strong>按地理分区的租约保持者</strong>：可以将按地理分区表中分区的租约保持者固定到访问地区，而其余副本固定到其余地区。此策略可实现快速的地区内读取和地区故障的幸存，但代价是跨地区写入速度较慢。</p>
+<p><strong>按地理位置分区的租约保持者</strong>：可以将按地理分区表中分区的租约保持者固定到访问地区，而其余副本固定到其余地区。此策略可实现快速的地区内读取和地区故障的幸存，但代价是跨地区写入速度较慢。</p>
 </li>
-<li><strong>重复的索引</strong>：像CRDB中的所有其他数据一样，索引存储在可以固定到特定地区的范围中。通过在表上复制索引并将每个索引的租约保持者固定到特定地区，该数据库可以提供快速的本地读取功能，同时保留抵抗地区故障的能力。这会带来较高的写入放大率和较慢的跨地区写入，但对于不经常更新或无法绑定到特定地理位置的数据很有用。</li>
+<li><strong>重复的索引</strong>：像CRDB中的所有其他数据一样，索引存储在可以固定到特定地区的范围中。通过在表上复制索引并将每个索引的租约保持者固定到特定地区，该数据库可以提供快速的本地读取功能，同时保证抵抗地区故障的能力。这会带来较高的写入放大率和较慢的跨地区写入，但对于不经常更新或无法绑定到特定地理位置的数据很有用。</li>
 </ul>
 <h2 id="3">3 事务</h2>
-<p>CRDB事务可以跨越整个键空间，在提供ACID保证的同时，可以触及驻留跨越分布式集群中的数据。CRDB使用了MVCC的变体来支持串行化隔离级别。</p>
-<p>我们从3.1节开始介绍事务模型概览，3.2节描述如何保证事务的原子性。在3.3节和3.4节，描述了保证串行化隔离的并发控制机制。最后，在3.5节介绍跟随者副本如何提供一致的对历史读。</p>
+<p>CRDB事务可以跨越整个键空间，在提供ACID保证的同时，可以访问跨越整个分布式集群中的数据。CRDB使用了MVCC的变体来支持串行化隔离级别。</p>
+<p>我们从3.1节开始介绍事务模型概览，3.2节描述如何保证事务的原子性。在3.3节和3.4节，描述了保证串行化隔离的并发控制机制。最后，在3.5节介绍跟随者副本如何提供一致性历史读。</p>
 <h3 id="31">3.1 概览</h3>
 <p>SQL事务从SQL连接的节点入口开始。这个节点交互式地从SQL客户端接受消息和返回应答，扮演着事务协调者的角色（编排和最终提交或者终止关联事务）。应用程序通常会连接到距离其地理位置最近的节点来优化延迟。下面的小结中，我们描述协调者算法。</p>
 <h4 id="311">3.1.1 事务协调者的执行</h4>
-<p>算法1给出了以协调者视角的事务处理高层步骤。在事务的执行过程中，协调者接受到一系列来自SQL层的KV操作(第2行)。</p>
+<p>算法1给出了以协调者视角的事务处理高层步骤。在事务的执行过程中，协调者接受一系列来自SQL层的KV操作(第2行)。</p>
 <p><img alt="" src="../image/crdb_paper_algorithm_01.png" /></p>
 <p>SQL需要在下一个操作发出前，对当前操作进行应答。为了避免在复制操作时事务的停顿，协调者采用了两个重要的优化方法：写流水线和并行提交。写流水线不需要等待对当前操作复制就可以返回结果，并行提交使得提交操作和写流水线复制并行进行。组合起来，使得许多多语句SQL事务仅需一轮复制延迟就可以完成。</p>
 <p>为了实现前面提到的优化，协调者会跟踪还没有完全复制完成的操作(第一行)。还维护了事务时间戳，初始化为当前时间，但是可能会随着事务进行而增加。由于CRDB使用了MVCC，时间戳选择事务执行读取和写入的点（在此之后，其他事务可见）。</p>
 <p><strong>写流水线</strong>：每个操作都包括必须读取或更新的键，以及指示事务是否应使用当前操作提交的元数据。 如果某项操作未尝试提交（第6行），并且该操作与任何先前的操作（第7行）没有重叠，则可以立即执行该操作。 这样，可以“流水线化”对不同键的多个操作。 如果操作依赖于较早的运行中的操作，则执行必须等待较早的操作被复制； 这样的依赖会引入“管道停顿”。 流水线逻辑在算法2（下面讨论）中进行了概述，但依赖于此处计算的依赖关系。 此外，协调者以状态运行中对当前操作跟踪（第8行）。</p>
 <p>接下来，协调者将操作发送给租约持有者以执行并等待响应（第9行）。 响应中可能包含更大的时间戳（第10行），这表明读取了另一笔事务，迫使租约持有者调整操作时间戳。 然后，协调者尝试调整事务时间戳以使其匹配。 这是通过验证（通过一轮RPC）来实现的，即在新的时间戳上重复事务中的先前读取将返回相同的值（第11行和第12行）。 如果不是，事务将失败（第13和14行），可能必须重试。 该机制将在3.4节中详细介绍。</p>
 <p><strong>并行提交</strong>：现在思考一下，当事务提交时会发生什么？简单地可以认为一旦所有写入都已经被复制后就可以提交，需要至少两轮连续的共识周期。取而代之的是，并行提交协议使用暂存事务状态，使事务的真实状态取决于其所有写操作是否已被复制。这避免了额外的共识，因为协调者可以在启动暂存状态复制的同时验证未完成的写入（也需要被复制）（第5行）。假设两者都成功，则协调者可以立即确认事务已经提交（第15行）。在终止前，协调者将事务状态异步记录为已显式提交（第16和17行）。这样做是为了性能考虑，并在第3.2节中进行了讨论，我们还解释了在协调者过早崩溃后如何解决暂存记录。</p>
-<p>我们使用TLA+[36，38]正式验证了并行提交的安全性。具体来说，我们通过断言每个暂存事务最终都被明确地提交或中止而验证了原子性，而不管协调者是否失败，并没有告知客户端其他情况。我们还通过断言已提交事务保持提交状态来验证持久性。验证代码可在GitHub [14]上获得。</p>
+<p>我们使用TLA+[36，38]正式验证了并行提交的安全性。具体来说，我们通过断言每个暂存事务最终都被明确地提交或中止而验证了原子性，而不管协调者是否失败，并没有告知客户端其他情况。我们还通过断言已提交事务保持提交状态来验证持久性。验证代码可在GitHub[14]上获得。</p>
 <p>为了从经验上证明并行提交的好处，我们在分布于三个地区的三台服务器上运行了微基准测试。负载包括对表的单行写入，该表具有十列，并且在这些列上具有可变数量的二级索引。图2显示，对于这种负载，当表具有一个或多个二级索引时，并行提交可将吞吐量提高多达72％，并将p50延迟减少多达47％，因为索引更新需要多范围事务。这表明，即使事务需要跨范围的协调，它们的延迟仍保持不变。</p>
 <p><img alt="" src="../image/crdb_paper_02.png" /></p>
 <p><center>图2：并行提交的性能影响</center></p>
@@ -3086,8 +3086,8 @@
 <p>物理计划将逻辑扫描操作分为多个TableReader操作符，每个节点包含一个由扫描读取的范围的操作符。分割扫描后，将剩余的逻辑运算符与TableReader安排在同一节点上，从而将筛选器，联接和聚合推到尽可能接近物理数据的位置。</p>
 <p>图3显示了一个3节点集群上的两个表a和b的主索引之间的分布式哈希联接的示例，其中节点2保留了所请求的范围b，但是a的范围在节点1和节点三之间被划分。扫描后的数据将通过哈希混排到扫描中涉及的所有节点，并使用节点本地哈希联接运算符进行联接，然后发送回网关节点，网关节点将结果合并并返回给SQL客户端。数据库可以使用查询上的EXPLAIN（distsql）命令为任何查询生成这种图形。</p>
 <p><img alt="" src="../image/crdb_paper_03.png" /></p>
-<p><center>图3：分布式哈希连接的物理计划</center></p>
-<p>在数据流内部，CRDB根据输入基数和计划复杂性使用两种不同的执行引擎之一：一次行引擎或向量引擎。</p>
+<p><center>图3：分布式哈希连接的物理计划</center>
+在数据流内部，CRDB根据输入基数和计划复杂性使用两种不同的执行引擎之一：一次行引擎或向量引擎。</p>
 <h4 id="531">5.3.1 一次一行执行引擎</h4>
 <p>CRDB的主要执行引擎基于Volcano [26]迭代器模型，并一次处理一行。 CRDB中所有受支持的SQL功能都在此执行引擎中实现，包括联接，聚合，排序，窗口函数等。</p>
 <h4 id="532">5.3.2 向量化执行引擎</h4>
@@ -3113,19 +3113,19 @@
 <h4 id="613-tpc-camazon-aurora">6.1.3 TPC-C与Amazon Aurora的性能比较</h4>
 <p>为了演示以行业标准为基准的可扩展性，我们在CRDB v19.2.0上运行了具有1,000、10,000和100,000个仓库的TPC-C。 如表1所示，CRDB的扩展能力以接近最大的效率支持多达100,000个仓库，对应于500亿行和8 TB数据。 所有实验均符合TPC-C规范（包括等待时间和外键的使用）。</p>
 <p><img alt="" src="../image/crdb_paper_table_01.png" /></p>
-<p><center>表 1: TPC-C基准测试环境和结果</center></p>
-<p>Amazon Aurora是用于OLTP负载的商业数据库，该数据库还旨在具有可伸缩性和容错能力[72]。 与CRDB相比，单主Aurora在10,000个仓库中仅能达到7.3％的效率[55]。 AWS尚未发布多主Aurora的TPC-C[3]。</p>
+<p><center>表 1: TPC-C基准测试环境和结果</center>
+Amazon Aurora是用于OLTP负载的商业数据库，该数据库还旨在具有可伸缩性和容错能力[72]。 与CRDB相比，单主Aurora在10,000个仓库中仅能达到7.3％的效率[55]。 AWS尚未发布多主Aurora的TPC-C[3]。</p>
 <h3 id="62">6.2 多地区可用性和性能</h3>
 <p>为了说明通过不同的数据放置策略在性能和容错能力之间做出的取舍（第2.3节），我们在AZ和地区故障时针对多地区CRDB集群测量TPC-C 1,000性能。 除了每个地区的负载生成器之外，该实验还使用了在美国三个地区部署的9台n1-standard-4 GCP机器。</p>
 <p>图6中的虚线之间的时间段依次表示AZ故障和恢复以及地区范围的故障和恢复。 失败时，请求将路由到回退可用区（取决于策略，在同一地区还是在另一个地区）。 表和索引按仓库进行分区，以实现分区策略。 对于重复索引策略，只读项目表被复制到每个地区。</p>
 <p><img alt="" src="../image/crdb_paper_06.png" /></p>
-<p><center>图6：在各种放置策略和AZ/地区故障时多地区集群性能</center></p>
-<p>我们验证所有策略都能够容忍AZ故障。 AZ故障期间性能略有下降是由于剩余的AZ超载所致。 在这四项政策中，只有按地区划分的租约保持者可以容忍整个地区的失败。 这可以在整个地区范围内发生故障时实现更高的持续吞吐量，但会以稳定运行和恢复期间的p90延迟为代价（与按地理分区的副本变体相比）。 恢复较慢是由于主地区正在追赶未写入。 取决于策略，地区故障期间的性能下降可能归因于远程仓库事务阻塞或客户端必须跨越地区边界才能发出查询。 在稳定条件下，重复索引策略将保持最低的p90延迟。</p>
+<p><center>图6：在各种放置策略和AZ/地区故障时多地区集群性能</center>
+我们验证所有策略都能够容忍AZ故障。 AZ故障期间性能略有下降是由于剩余的AZ超载所致。 在这四项政策中，只有按地区划分的租约保持者可以容忍整个地区的失败。 这可以在整个地区范围内发生故障时实现更高的持续吞吐量，但会以稳定运行和恢复期间的p90延迟为代价（与按地理分区的副本变体相比）。 恢复较慢是由于主地区正在追赶未写入。 取决于策略，地区故障期间的性能下降可能归因于远程仓库事务阻塞或客户端必须跨越地区边界才能发出查询。 在稳定条件下，重复索引策略将保持最低的p90延迟。</p>
 <h3 id="63-spanner">6.3 与Spanner的比较</h3>
 <p>图7将CRDB的性能与YCSB [16]基准套件<sup id="fnref:2"><a class="footnote-ref" href="#fn:2">2</a></sup>上的Cloud Spanner的性能进行了比较。 由于Spanner是一项托管服务，因此不会透露其硬件配置。 因此，我们将比较几种CRDB配置（每个节点4、8和16个vCPU）。 作为参考，三个带有本地存储的n2-standard-8 GCP VM（每个8个vCPU），是一个“节点” Spanner实例（由三个副本组成）成本的0.2％之内。 在所有测试中，副本均分布在单个地区中的三个可用区中。</p>
 <p><img alt="" src="../image/crdb_paper_07.png" /></p>
-<p><center>图 7：CRDB和Spanner在YCSB A-F上的吞吐量，轻负载下CRDB和Spanner的延迟</center></p>
-<p>对于大多数YSCB负载，CRDB显示出明显更高的吞吐量。 随着群集规模的增加，这两个系统都能水平伸缩。 一个例外情况是负载A（繁重的zipfian键分发），由于负载的竞争较高，因此CRDB无法很好地扩展<sup id="fnref:3"><a class="footnote-ref" href="#fn:3">3</a></sup>。 还包括在轻负载下对YCSB执行的读写延迟的测试。 CRDB在所有百分位数上均显示出明显较低的延迟，这部分归因于Spanner的提交等待。 重载下的延迟结果很嘈杂，但趋势相似，由于篇幅所限，我们将其省略。</p>
+<p><center>图 7：CRDB和Spanner在YCSB A-F上的吞吐量，轻负载下CRDB和Spanner的延迟</center>
+对于大多数YSCB负载，CRDB显示出明显更高的吞吐量。 随着群集规模的增加，这两个系统都能水平伸缩。 一个例外情况是负载A（繁重的zipfian键分发），由于负载的竞争较高，因此CRDB无法很好地扩展<sup id="fnref:3"><a class="footnote-ref" href="#fn:3">3</a></sup>。 还包括在轻负载下对YCSB执行的读写延迟的测试。 CRDB在所有百分位数上均显示出明显较低的延迟，这部分归因于Spanner的提交等待。 重载下的延迟结果很嘈杂，但趋势相似，由于篇幅所限，我们将其省略。</p>
 <h3 id="64">6.4 使用案例研究</h3>
 <p>数千个组织使用CRDB。在本节中，我们给出了两个有关CRDB使用情况的特定案例研究。</p>
 <h4 id="641">6.4.1 电信提供商的虚拟客户支持代理</h4>
