--- a/index.html
+++ b/index.html
@@ -1804,8 +1804,8 @@
                 
                 
                 <h1 id="my-blog">my blog</h1>
-<p><code>2020-06-27</code>　<a href="translate/crdb/crdb_paper_cn/">CockroachDB:弹性地理分布SQL数据库</a></p>
-<p><code>2020-06-25</code>　<a href="translate/taurus_paper_cn/">TaurusDB:高性能高可用低成本云数据库</a></p>
+<p><code>2020-06-27</code>　<a href="translate/crdb/crdb_paper_cn/">CockroachDB 论文翻译</a></p>
+<p><code>2020-06-25</code>　<a href="translate/taurus_paper_cn/">TaurusDB 论文翻译</a></p>
 <p><code>2020-05-01</code>　<a href="notes/pragmatic_programmer/">程序员修炼之道读书笔记</a></p>
 <p><code>2020-02-15</code>　<a href="translate/paxos_made_live/">Paxos Made Live</a></p>
 <p><code>2020-01-28</code>　<a href="database/db_internals_ch14_consensus/">分布式系统之共识</a></p>
